Source/JavaScriptCore: Added an interface to take IsWhiteSpaceFunctionPtr. https://bugs.webkit.org/show_bug.cgi?id=57746

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-07-26
Reviewed by Kent Tamura.

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::stripWhiteSpace):
  Added an interface to take IsWhiteSpaceFunctionPtr.
(WTF::StringImpl::simplifyWhiteSpace): ditto.
* wtf/text/StringImpl.h:
* wtf/text/WTFString.cpp:
(WTF::String::stripWhiteSpace): ditto.
(WTF::String::simplifyWhiteSpace): ditto.
* wtf/text/WTFString.h:

Source/WebCore: Uses isHTMLSpace to normalize white spaces.
https://bugs.webkit.org/show_bug.cgi?id=57746

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-07-26
Reviewed by Kent Tamura.

Test: fast/forms/option-strip-unicode-spaces.html

* dom/OptionElement.cpp:
(WebCore::OptionElement::normalizeText):
  Uses isHTMLSpace to trim and replace white spaces.

LayoutTests: Added a test to normalize option.text.
https://bugs.webkit.org/show_bug.cgi?id=57746

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-07-26
Reviewed by Kent Tamura.

* fast/forms/option-strip-unicode-spaces-expected.txt: Added.
* fast/forms/option-strip-unicode-spaces.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@91746 bbb929c8-8fbe-4397-9dbb-9b2b20218538