Source/JavaScriptCore/wtf/text/StringImpl.h
@@ -61,6 +61,7 @@ enum TextCaseSensitivity { TextCaseSensitive, TextCaseInsensitive };
 typedef OwnFastMallocPtr<const UChar> SharableUChar;
 typedef CrossThreadRefCounted<SharableUChar> SharedUChar;
 typedef bool (*CharacterMatchFunctionPtr)(UChar);
+typedef bool (*IsWhiteSpaceFunctionPtr)(UChar);
 
 class StringImpl : public StringImplBase {
     friend struct JSC::IdentifierCStringTranslator;
@@ -288,7 +289,9 @@ public:
     PassRefPtr<StringImpl> foldCase();
 
     PassRefPtr<StringImpl> stripWhiteSpace();
+    PassRefPtr<StringImpl> stripWhiteSpace(IsWhiteSpaceFunctionPtr);
     PassRefPtr<StringImpl> simplifyWhiteSpace();
+    PassRefPtr<StringImpl> simplifyWhiteSpace(IsWhiteSpaceFunctionPtr);
 
     PassRefPtr<StringImpl> removeCharacters(CharacterMatchFunctionPtr);
 
