Source/WebCore/dom/OptionElement.cpp
@@ -24,6 +24,7 @@
 #include "Document.h"
 #include "Element.h"
 #include "HTMLNames.h"
+#include "HTMLParserIdioms.h"
 #include "HTMLOptionElement.h"
 #include "OptionGroupElement.h"
 #include "ScriptElement.h"
@@ -97,10 +98,11 @@ String OptionElement::normalizeText(const Document* document, const String& src)
     String text = document->displayStringModifiedByEncoding(src);
 
     // In WinIE, leading and trailing whitespace is ignored in options and optgroups. We match this behavior.
-    text = text.stripWhiteSpace();
+    text = text.stripWhiteSpace(isHTMLSpace);
 
     // We want to collapse our whitespace too.  This will match other browsers.
-    text = text.simplifyWhiteSpace();
+    text = text.simplifyWhiteSpace(isHTMLSpace);
+
     return text;
 }
 
