third_party/WebKit/Source/JavaScriptCore/wtf/text/StringImpl.cpp
@@ -316,6 +316,11 @@ PassRefPtr<StringImpl> StringImpl::foldCase()
 
 PassRefPtr<StringImpl> StringImpl::stripWhiteSpace()
 {
+    return stripWhiteSpace(isSpaceOrNewline);
+}
+
+PassRefPtr<StringImpl> StringImpl::stripWhiteSpace(IsWhiteSpaceFunctionPtr isWhiteSpace)
+{
     if (!m_length)
         return empty();
 
@@ -323,7 +328,7 @@ PassRefPtr<StringImpl> StringImpl::stripWhiteSpace()
     unsigned end = m_length - 1;
     
     // skip white space from start
-    while (start <= end && isSpaceOrNewline(m_data[start]))
+    while (start <= end && isWhiteSpace(m_data[start]))
         start++;
     
     // only white space
@@ -331,7 +336,7 @@ PassRefPtr<StringImpl> StringImpl::stripWhiteSpace()
         return empty();
 
     // skip white space from end
-    while (end && isSpaceOrNewline(m_data[end]))
+    while (end && isWhiteSpace(m_data[end]))
         end--;
 
     if (!start && end == m_length - 1)
@@ -373,6 +378,11 @@ PassRefPtr<StringImpl> StringImpl::removeCharacters(CharacterMatchFunctionPtr fi
 
 PassRefPtr<StringImpl> StringImpl::simplifyWhiteSpace()
 {
+    return StringImpl::simplifyWhiteSpace(isSpaceOrNewline);
+}
+
+PassRefPtr<StringImpl> StringImpl::simplifyWhiteSpace(IsWhiteSpaceFunctionPtr isWhiteSpace)
+{
     StringBuffer data(m_length);
 
     const UChar* from = m_data;
@@ -383,12 +393,12 @@ PassRefPtr<StringImpl> StringImpl::simplifyWhiteSpace()
     UChar* to = data.characters();
     
     while (true) {
-        while (from != fromend && isSpaceOrNewline(*from)) {
+        while (from != fromend && isWhiteSpace(*from)) {
             if (*from != ' ')
                 changedToSpace = true;
             from++;
         }
-        while (from != fromend && !isSpaceOrNewline(*from))
+        while (from != fromend && !isWhiteSpace(*from))
             to[outc++] = *from++;
         if (from != fromend)
             to[outc++] = ' ';
